--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -41,7 +41,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="/index">@message</a>
+                    <a class="navbar-brand" href="/index">@session.get("type") : @session.get("name")</a>
                 </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,6 +80,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
+                        @message
                         <form id="project" class="text-center" role="form" action = "/addproject" method = post>
                                 <!-- add text -->
                             <div class="wrap">
