--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -97,14 +97,15 @@
                                     <tbody>
                                     @votes.map { acc =>
                                         <tr>
-
-                                            <td id="id" name="id">@acc.getname</td>
-                                            <td>@acc.getScore</td>
-                                            <td>@acc.getScore2</td>
-                                            <td>@acc.getScore3</td>
-                                            <td>@acc.getScore4</td>
-                                            <td>@acc.getScore5</td>
-                                            <td>@acc.getCriteria</td>
+                                            @if(!acc.getname().equals("Empty")) {
+                                                <td id="id" name="id">@acc.getname</td>
+                                                <td>@acc.getScore</td>
+                                                <td>@acc.getScore2</td>
+                                                <td>@acc.getScore3</td>
+                                                <td>@acc.getScore4</td>
+                                                <td>@acc.getScore5</td>
+                                                <td>@acc.getCriteria</td>
+                                            }
                                         </tr>
                                     <tbody>
                                     }
