--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -51,20 +51,22 @@
                                 <a href="#page-top"></a>
                             </li>
                             <li class = "page-scroll">
-                                <a href = "/criteria">Criteria Vote</a>
-                            </li>
-                            <li class = "page-scroll">
-                                <a href = "/TimerPage">Set Timer</a>
-                            </li>
-                            <li class = "page-scroll">
                                 <a href = "/index">Index</a>
                             </li>
-                            <li class = "page-scoll">
-                                <a href = "/addprojectpage">Add Project</a>
-                            </li>
-                            <li class = "page-scoll">
-                                <a href = "/register">register</a>
-                            </li>
+                            @if(session().get("type").equals("Admin")) {
+                                <li class = "page-scroll">
+                                    <a href = "/criteria">Criteria Vote</a>
+                                </li>
+                                <li class = "page-scroll">
+                                    <a href = "/TimerPage">Set Timer</a>
+                                </li>
+                                <li class = "page-scoll">
+                                    <a href = "/addprojectpage">Add Project</a>
+                                </li>
+                                <li class = "page-scoll">
+                                    <a href = "/register">register</a>
+                                </li>
+                            }
                             <li class="page-scroll">
                                 <a href= "/logout">Log Out</a>
                             </li>
