--- a/app/views/Register.scala.html
+++ b/app/views/Register.scala.html
@@ -12,6 +12,7 @@
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addText.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
@@ -24,6 +25,7 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
     <body>
@@ -80,33 +82,35 @@
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
                         <form action = "/regis" method = post>
-                            <div class="form-group">
-                                <label for="Username">Username</label>
-                                <input class="form-control" id="Username" name="username" placeholder="Enter Username" >
+                            <div class="wrap">
+                                <div class="mat-div">
+                                    <label for="Username" class="mat-label">Username</label>
+                                    <input class="mat-input" id="Username" name="username" placeholder="enter username" >
+                                </div>
+                                <div class="mat-div">
+                                    <label for="Password1" class="mat-label">Password</label>
+                                    <input class="mat-input" type="Password"  id="Password" name="password" placeholder="enter password">
+                                </div>
+                                <div class="mat-div">
+                                    <label for="Username" class="mat-label">Group ID</label>
+                                    <input type="form-control" class="mat-input" id="GroupID" name="groupid" placeholder="enter group ID">
+                                </div>
+                                <div class="mat-div">
+                                    <label for="Username" class="mat-label">Name</label>
+                                    <input type="form-control" class="mat-input" id="GroupID" name="name" placeholder="enter name">
+                                </div>
+                                <br>
+                                <div class="form-group">
+                                    <select class="form-control" id="type" name="type">
+                                        <option  id="type" name="type">Admin</option>
+                                        <option  id="type" name="type">Voter</option>
+                                    </select>
+                                </div>
+                                <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                             </div>
-                            <div class="form-group">
-                                <label for="Password1">Password</label>
-                                <input type="Password" class="form-control" id="Password" name="password" placeholder="Password">
-                            </div>
-                            <div class="form-group">
-                                <label for="Username">Group ID</label>
-                                <input type="form-control" class="form-control" id="GroupID" name="groupid" placeholder="Group ID">
-                            </div>
-                            <div class="form-group">
-                                <label for="Username">Name</label>
-                                <input type="form-control" class="form-control" id="GroupID" name="name" placeholder="Name">
-                            </div>
-                            <div class="form-group">
-                                <select class="form-control" id="type" name="type">
-                                    <option  id="type" name="type">Admin</option>
-                                    <option  id="type" name="type">Voter</option>
-                                </select>
-                            </div>
-                            <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                         </form>
 
-                            <a href="/AccList"> <button type="button" class="btn btn-success">AccountList</button>
-
+                            <a href="/AccList"> <button type="button" class="btn btn-success">AccountList</button></a>
                     </div>
                 </div>
 
