--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -13,6 +13,7 @@
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addText.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
@@ -26,8 +27,8 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("../../public/javascripts/addImage.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("../../public/javascripts/addText.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addImage.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
     <body>
@@ -82,12 +83,17 @@
                 <div class="row">
                     <div class="col-lg-12" style="text-decoration-color: slategrey">
                         <form id="timer" class="text-center" role="form" action = "/setTimer" method = post>
-                            <div class="mat-div">
-                                Hour  >> <input class="mat-input" type="text" name="hour" value="0">
-                            <div class="mat-div">
-                                Minute >> <input class="mat-input" type="text" name="minute" value="0">
+                            <div class="wrap">
+                                <div class="mat-div">
+                                    <label for="hour" class="mat-label">Hour</label>
+                                    <input class="mat-input" type="text" name="hour" placeholder="0">
+                                </div>
+                                <div class="mat-div">
+                                    <label for="hour" class="mat-label">Minute</label>
+                                    <input class="mat-input" type="text" name="minute" placeholder="0">
+                                </div>
+                                <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                             </div>
-                            <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                         </form>
                     </div>
                 </div>
