--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -15,6 +15,7 @@
             <!-- Custom CSS -->
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addText.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
             <!-- Bootstrap Core JavaScript -->
@@ -27,7 +28,7 @@
 
             <!-- Custom Theme JavaScript -->
         <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/addProj.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
     <body>
@@ -86,17 +87,17 @@
                             <div class="wrap">
                                 <div class="mat-div">
                                     <label for="name" class="mat-label">Name</label>
-                                    <input type="text" class="mat-input" name="name">
+                                    <input type="text" class="mat-input" name="name" placeholder="enter the project name">
                                 </div>
 
                                 <div class="mat-div">
                                     <label for="description" class="mat-label">Project Description</label>
-                                    <input type="text" class="mat-input" name="description">
+                                    <input type="text" class="mat-input" name="description" placeholder="enter the project description">
                                 </div>
 
                                 <div class="mat-div">
                                     <label for="maneger" class="mat-label">Project Manager</label>
-                                    <input type="text" class="mat-input" name="manager">
+                                    <input type="text" class="mat-input" name="manager"  placeholder="enter the project maneger">
                                 </div>
                                 <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                             </div>
