--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,291 +1,287 @@
 
-/*.commentBox {*/
-    /*height: 40%;*/
-    /*width: 30%;*/
-/*}*/
-/*#header {*/
-    /*background-color:yellow;*/
-    /*text-align:center;*/
-/*}*/
-/*#score{*/
-    /*width: 100%;*/
-    /*padding: 60pt;*/
-/*}*/
-/*#submit{*/
-    /*width: 50%;*/
-/*}*/
+.commentBox {
+    height: 40%;
+    width: 30%;
+}
+#header {
+    background-color:yellow;
+    text-align:center;
+}
+#score{
+    width: 100%;
+    padding: 60pt;
+}
+#submit{
+    width: 50%;
+}
 
-/*.rating {*/
-    /*overflow: hidden;*/
-    /*display: inline-block;*/
-    /*padding:1.5em;*/
+.rating {
+    overflow: hidden;
+    display: inline-block;
+    padding:1.5em;
 
-/*}*/
-/*.rating-input {*/
-    /*position: absolute;*/
-    /*left: 0;*/
-    /*top: -50px;*/
-/*}*/
+}
+.rating-input {
+    position: absolute;
+    left: 0;
+    top: -50px;
+}
 
-/*.rating:hover .rating-star:hover,*/
-/*.rating:hover .rating-star:hover ~ .rating-star,*/
-/*.rating-input:checked ~ .rating-star {*/
-    /*background-position: 0 0;*/
-/*}*/
-/*.rating-star,*/
-/*.rating:hover .rating-star {*/
-    /*position: relative;*/
-    /*float: right;*/
-    /*display: block;*/
-    /*width: 100px;*/
-    /*height: 100px;*/
-    /*background: url('../images/star.png') 0 -100px;*/
-/*}*/
+.rating:hover .rating-star:hover,
+.rating:hover .rating-star:hover ~ .rating-star,
+.rating-input:checked ~ .rating-star {
+    background-position: 0 0;
+}
+.rating-star,
+.rating:hover .rating-star {
+    position: relative;
+    float: right;
+    display: block;
+    width: 100px;
+    height: 100px;
+    background: url('../images/star.png') 0 -100px;
+}
 
-/** Header */
-/*.masthead-brand {*/
-    /*margin-top: 10px;*/
-    /*margin-bottom: 10px;*/
-/*}*/
+* Header
+.masthead-brand {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
-/*.masthead-nav > li {*/
-    /*display: inline-block;*/
-/*}*/
+.masthead-nav > li {
+    display: inline-block;
+}
 
-/*.masthead-nav > li + li {*/
-    /*margin-left: 20px;*/
-/*}*/
-/*.masthead-nav > li > a {*/
-    /*padding-right: 0;*/
-    /*padding-left: 0;*/
-    /*font-size: 16px;*/
-    /*font-weight: bold;*/
-    /*color: #fff;*/
-    /*color: rgba(255,255,255,.75);*/
-    /*border-bottom: 2px solid transparent;*/
-/*}*/
-/*.masthead-nav > li > a:hover,*/
-/*.masthead-nav > li > a:focus {*/
-    /*background-color: transparent;*/
-    /*border-bottom-color: #a9a9a9;*/
-    /*border-bottom-color: rgb(220,220,220);*/
-/*}*/
-/*.masthead-nav > .active > a,*/
-/*.masthead-nav > .active > a:hover,*/
-/*.masthead-nav > .active > a:focus {*/
-    /*color: #666;*/
-    /*border-bottom-color: #666;*/
-/*}*/
+.masthead-nav > li + li {
+    margin-left: 20px;
+}
+.masthead-nav > li > a {
+    padding-right: 0;
+    padding-left: 0;
+    font-size: 16px;
+    font-weight: bold;
+    color: #fff;
+    color: rgba(255,255,255,.75);
+    border-bottom: 2px solid transparent;
+}
+.masthead-nav > li > a:hover,
+.masthead-nav > li > a:focus {
+    background-color: transparent;
+    border-bottom-color: #a9a9a9;
+    border-bottom-color: rgb(220,220,220);
+}
+.masthead-nav > .active > a,
+.masthead-nav > .active > a:hover,
+.masthead-nav > .active > a:focus {
+    color: #666;
+    border-bottom-color: #666;
+}
 
-/*#team {*/
-    /*text-align:center;*/
-/*}*/
+#team {
+    text-align:center;
+}
 
-/* navigation bar */
-/*@media(min-width:768px) {*/
-    /*header .container {*/
-        /*padding-top: 200px;*/
-        /*padding-bottom: 100px;*/
-    /*}*/
+@media(min-width:768px) {
+    header .container {
+        padding-top: 200px;
+        padding-bottom: 100px;
+    }
 
-    /*header .intro-text .name {*/
-        /*font-size: 4.75em;*/
-    /*}*/
+    header .intro-text .name {
+        font-size: 4.75em;
+    }
 
-    /*header .intro-text .skills {*/
-        /*font-size: 1.75em;*/
-    /*}*/
-/*}*/
+    header .intro-text .skills {
+        font-size: 1.75em;
+    }
+}
 
-/*@media(min-width:768px) {*/
-    /*.navbar-fixed-top {*/
-        /*padding: 25px 0;*/
-        /*-webkit-transition: padding .3s;*/
-        /*-moz-transition: padding .3s;*/
-        /*transition: padding .3s;*/
-    /*}*/
+@media(min-width:768px) {
+    .navbar-fixed-top {
+        padding: 25px 0;
+        -webkit-transition: padding .3s;
+        -moz-transition: padding .3s;
+        transition: padding .3s;
+    }
 
-    /*.navbar-fixed-top .navbar-brand {*/
-        /*font-size: 2em;*/
-        /*-webkit-transition: all .3s;*/
-        /*-moz-transition: all .3s;*/
-        /*transition: all .3s;*/
-    /*}*/
+    .navbar-fixed-top .navbar-brand {
+        font-size: 2em;
+        -webkit-transition: all .3s;
+        -moz-transition: all .3s;
+        transition: all .3s;
+    }
 
-    /*.navbar-fixed-top.navbar-shrink {*/
-        /*padding: 10px 0;*/
-    /*}*/
+    .navbar-fixed-top.navbar-shrink {
+        padding: 10px 0;
+    }
 
-    /*.navbar-fixed-top.navbar-shrink .navbar-brand {*/
-        /*font-size: 1.5em;*/
-    /*}*/
-/*}*/
+    .navbar-fixed-top.navbar-shrink .navbar-brand {
+        font-size: 1.5em;
+    }
+}
 
-/*.navbar {*/
-    /*text-transform: uppercase;*/
-    /*font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
-    /*font-weight: 700;*/
-/*}*/
+.navbar {
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-weight: 700;
+}
 
-/*.navbar a:focus {*/
-    /*outline: 0;*/
-/*}*/
+.navbar a:focus {
+    outline: 0;
+}
 
-/*.navbar .navbar-nav {*/
-    /*letter-spacing: 1px;*/
-/*}*/
+.navbar .navbar-nav {
+    letter-spacing: 1px;
+}
 
-/*.navbar .navbar-nav li a:focus {*/
-    /*outline: 0;*/
-/*}*/
+.navbar .navbar-nav li a:focus {
+    outline: 0;
+}
 
-/*.navbar-default,*/
-/*.navbar-inverse {*/
-    /*border: 0;*/
-/*}*/
+.navbar-default,
+.navbar-inverse {
+    border: 0;
+}
 
-/*hr.star-light,*/
-/*hr.star-primary {*/
-    /*margin: 25px auto 30px;*/
-    /*padding: 0;*/
-    /*max-width: 250px;*/
-    /*border: 0;*/
-    /*border-top: solid 5px;*/
-    /*text-align: center;*/
-/*}*/
+hr.star-light,
+hr.star-primary {
+    margin: 25px auto 30px;
+    padding: 0;
+    max-width: 250px;
+    border: 0;
+    border-top: solid 5px;
+    text-align: center;
+}
 
-/*hr.star-light:after,*/
-/*hr.star-primary:after {*/
-    /*content: "\f005";*/
-    /*display: inline-block;*/
-    /*position: relative;*/
-    /*top: -.8em;*/
-    /*padding: 0 .25em;*/
-    /*font-family: FontAwesome;*/
-    /*font-size: 2em;*/
-/*}*/
+hr.star-light:after,
+hr.star-primary:after {
+    content: "\f005";
+    display: inline-block;
+    position: relative;
+    top: -.8em;
+    padding: 0 .25em;
+    font-family: FontAwesome;
+    font-size: 2em;
+}
 
-/*hr.star-light {*/
-    /*border-color: #fff;*/
-/*}*/
+hr.star-light {
+    border-color: #fff;
+}
 
-/*hr.star-light:after {*/
-    /*color: #fff;*/
-    /*background-color: #18bc9c;*/
-/*}*/
+hr.star-light:after {
+    color: #fff;
+    background-color: #18bc9c;
+}
 
-/*hr.star-primary {*/
-    /*border-color: #2c3e50;*/
-/*}*/
+hr.star-primary {
+    border-color: #2c3e50;
+}
 
-/*hr.star-primary:after {*/
-    /*color: #2c3e50;*/
-    /*background-color: #fff;*/
-/*}*/
-
-/* header */
-
-/*header {*/
-    /*text-align: center;*/
-    /*color: #fff;*/
-    /*background: #fada6c;;*/
-/*}*/
-
-/*header .container {*/
-    /*padding-top: 100px;*/
-    /*padding-bottom: 50px;*/
-/*}*/
-
-/*header img {*/
-    /*display: block;*/
-    /*margin: 0 auto 20px;*/
-/*}*/
-
-/*header .intro-text .name {*/
-    /*display: block;*/
-    /*text-transform: uppercase;*/
-    /*font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;*/
-    /*font-size: 2em;*/
-    /*font-weight: 700;*/
-/*}*/
-
-/*header .intro-text .skills {*/
-    /*font-size: 1.25em;*/
-    /*font-weight: 300;*/
-/*}*/
+hr.star-primary:after {
+    color: #2c3e50;
+    background-color: #fff;
+}
 
 
-/*@media(min-width:768px) {*/
-    /*header .container {*/
-        /*padding-top: 200px;*/
-        /*padding-bottom: 100px;*/
-    /*}*/
+header {
+    text-align: center;
+    color: #fff;
+    background: #43ba4b;
+}
 
-    /*header .intro-text .name {*/
-        /*font-size: 4.75em;*/
-    /*}*/
+header .container {
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
 
-    /*header .intro-text .skills {*/
-        /*font-size: 1.75em;*/
-    /*}*/
-/*}*/
+header img {
+    display: block;
+    margin: 0 auto 20px;
+}
 
-/* project selection */
+header .intro-text .name {
+    display: block;
+    text-transform: uppercase;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 2em;
+    font-weight: 700;
+}
 
-/*#portfolio .portfolio-item {*/
-    /*right: 0;*/
-    /*margin: 0 0 15px;*/
-/*}*/
+header .intro-text .skills {
+    font-size: 1.25em;
+    font-weight: 300;
+}
 
-/*#portfolio .portfolio-item .portfolio-link {*/
-    /*display: block;*/
-    /*position: relative;*/
-    /*margin: 0 auto;*/
-    /*max-width: 400px;*/
-/*}*/
 
-/*#portfolio .portfolio-item .portfolio-link .caption {*/
-    /*position: absolute;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-    /*opacity: 0;*/
-    /*background: rgba(24,188,156,.9);*/
-    /*-webkit-transition: all ease .5s;*/
-    /*-moz-transition: all ease .5s;*/
-    /*transition: all ease .5s;*/
-/*}*/
+@media(min-width:768px) {
+    header .container {
+        padding-top: 200px;
+        padding-bottom: 100px;
+    }
 
-/*#portfolio .portfolio-item .portfolio-link .caption:hover {*/
-    /*opacity: 1;*/
-/*}*/
+    header .intro-text .name {
+        font-size: 4.75em;
+    }
 
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content {*/
-    /*position: absolute;*/
-    /*top: 50%;*/
-    /*width: 100%;*/
-    /*height: 20px;*/
-    /*margin-top: -12px;*/
-    /*text-align: center;*/
-    /*font-size: 20px;*/
-    /*color: #fff;*/
-/*}*/
+    header .intro-text .skills {
+        font-size: 1.75em;
+    }
+}
 
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content i {*/
-    /*margin-top: -12px;*/
-/*}*/
+#portfolio .portfolio-item {
+    right: 0;
+    margin: 0 0 15px;
+}
 
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,*/
-/*#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {*/
-    /*margin: 0;*/
-/*}*/
+#portfolio .portfolio-item .portfolio-link {
+    display: block;
+    position: relative;
+    margin: 0 auto;
+    max-width: 400px;
+}
 
-/*#portfolio * {*/
-    /*z-index: 2;*/
-/*}*/
+#portfolio .portfolio-item .portfolio-link .caption {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba(24,188,156,.9);
+    -webkit-transition: all ease .5s;
+    -moz-transition: all ease .5s;
+    transition: all ease .5s;
+}
 
-/*@media(min-width:767px) {*/
-    /*#portfolio .portfolio-item {*/
-        /*margin: 0 0 30px;*/
-    /*}*/
-/*}*/
+#portfolio .portfolio-item .portfolio-link .caption:hover {
+    opacity: 1;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    height: 20px;
+    margin-top: -12px;
+    text-align: center;
+    font-size: 20px;
+    color: #fff;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
+    margin-top: -12px;
+}
+
+#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
+#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+    margin: 0;
+}
+
+#portfolio * {
+    z-index: 2;
+}
+
+@media(min-width:767px) {
+    #portfolio .portfolio-item {
+        margin: 0 0 30px;
+    }
+}
 
