edited addText ui

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -186,7 +186,7 @@ hr.star-primary:after {
 header {
     text-align: center;
     color: #fff;
-    background: #43ba4b;
+    background: #7F8C8D;
 }
 
 header .container {
