Change vote to rate string

--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -92,7 +92,7 @@
                                             <th>Completeness</th>
                                             <th>Security</th>
                                             <th>Quality of UI</th>
-                                            <th>Criteria</th>
+                                            <th>Vote</th>
 
                                         </tr>
                                     </thead>
