--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -20,6 +20,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addImage.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/project.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
 
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
