--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addProj.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/addText.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
             <!-- jQuery -->
         <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
         <script src="@routes.Assets.at("javascripts/jquery.countdown.js")"></script>
@@ -31,7 +32,7 @@
         <script src="@routes.Assets.at("javascripts/addText.js")" type="text/javascript"></script>
 
     </head>
-    <body>
+    <body id = "page-top">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -154,5 +155,12 @@
                 </div>
             </div>
         </footer>
+
+        <div class="scroll-top page-scroll visible-xs visible-sm">
+            <a class="btn btn-primary" href="#page-top">
+                <i class="fa fa-chevron-up"></i>
+            </a>
+        </div>
+
     </body>
 </html>
