--- a/app/views/complete.scala.html
+++ b/app/views/complete.scala.html
@@ -15,6 +15,7 @@
                 <!-- Custom CSS -->
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/freelancer.css")">
             <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/result.css")">
+            <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/font-awesome.css")">
                 <!-- jQuery -->
             <script src="@routes.Assets.at("javascripts/jquery.js")" type="text/javascript"></script>
                 <!-- Bootstrap Core JavaScript -->
@@ -29,7 +30,7 @@
             <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
 
         </head>
-        <body>
+        <body id = "page-top">
             <nav class="navbar navbar-default navbar-fixed-top">
 
                 <div class="container">
@@ -144,6 +145,12 @@
                     </div>
                 </div>
             </footer>
+
+            <div class="scroll-top page-scroll visible-xs visible-sm">
+                <a class="btn btn-primary" href="#page-top">
+                    <i class="fa fa-chevron-up"></i>
+                </a>
+            </div>
 
         </body>
     </html>
