--- a/app/views/criteria.scala.html
+++ b/app/views/criteria.scala.html
@@ -34,7 +34,7 @@
 
 
 </head>
-<body>
+<body id = "page-top">
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
@@ -128,6 +128,12 @@
                 </div>
             </div>
         </footer>
+
+    <div class="scroll-top page-scroll visible-xs visible-sm">
+        <a class="btn btn-primary" href="#page-top">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+    </div>
 
     <script type="text/javascript">
     $('#clock').countdown('@controllers.TimerController.getDate() ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
