--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -32,7 +32,7 @@
                 <!-- Custom Theme JavaScript -->
             <script src="@routes.Assets.at("javascripts/freelancer.js")" type="text/javascript"></script>
         </head>
-        <body>
+        <body id = "page-top">
             <nav class="navbar navbar-default navbar-fixed-top">
                 <div class="container">
                         <!-- Brand and toggle get grouped for better mobile display -->
@@ -156,6 +156,12 @@
                     </div>
                 </div>
             </footer>
+
+            <div class="scroll-top page-scroll visible-xs visible-sm">
+                <a class="btn btn-primary" href="#page-top">
+                    <i class="fa fa-chevron-up"></i>
+                </a>
+            </div>
 
             <script type="text/javascript">
                 $('#clock').countdown('@controllers.TimerController.getDate() ' + @controllers.TimerController.getTimeLeftHour + ':' + @controllers.TimerController.getTimeLeftMinute + ':0')
