--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -38,7 +38,7 @@
         <script src="@routes.Assets.at("javascripts/addImage.js")" type="text/javascript"></script>
 
     </head>
-    <body>
+    <body id="page-top">
         <nav class="navbar navbar-default navbar-fixed-top">
             <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
@@ -412,5 +412,11 @@
                     </div>
                 </div>
             </footer>
+
+        <div class="scroll-top page-scroll visible-xs visible-sm">
+            <a class="btn btn-primary" href="#page-top">
+                <i class="fa fa-chevron-up"></i>
+            </a>
+        </div>
     </body>
 </html>
