add projectList button and fix result vote

--- a/app/views/addproject.scala.html
+++ b/app/views/addproject.scala.html
@@ -102,6 +102,7 @@
                                 <button id="submit" type="submit" class="btn btn-primary btn-block center-block">Submit</button>
                             </div>
                         </form>
+                    <a href="/projectList"> <button type="button" class="btn btn-success">ProjectList</button></a>
                     </div>
                 </div>
             </div>
