--- a/app/views/login.scala.html
+++ b/app/views/login.scala.html
@@ -32,7 +32,7 @@
                 }
 
                 <input placeholder="Username : 561054xxxx" type="text" id="Username" name="username"/>
-                <input placeholder="Password : ...@@ku.th" type="password" id="Password" name="password"/>
+                <input placeholder="Password : ..." type="password" id="Password" name="password"/>
                 <br>
                 <button type="submit" class="log-btn" >Log in</button>
             </form>
