--- a/public/stylesheets/bootstrap.css
+++ b/public/stylesheets/bootstrap.css
@@ -3938,9 +3938,9 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   border-width: 1px 0 0;
 }
 .navbar-brand {
-  float: left;
+  /*float: left;*/
   padding: 19.5px 15px;
-  font-size: 19px;
+  font-size: 14px;
   line-height: 21px;
   height: 60px;
 }
@@ -3951,6 +3951,10 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
 .navbar-brand > img {
   display: block;
 }
+@media (min-width: 1000px) {
+
+}
+
 @media (min-width: 1000px) {
   .navbar > .container .navbar-brand,
   .navbar > .container-fluid .navbar-brand {
