--- a/app/views/projectPage.scala.html
+++ b/app/views/projectPage.scala.html
@@ -1,3 +1,5 @@
+@import result.RateList
+
 @import result.Project
 @import result.Vote
 @import play.api.Play.resource
@@ -141,13 +143,13 @@
                                 <a href="#!" class="closePopUp">X</a>
                                 <h2>Rate for Team @project.name</h2>
                             </header>
-
+                            @defining(RateList.find.all()) { rates =>
                             <article>
                                 <form id="score" class="text-center" role="form" action = "/voting" method = post onsubmit="return confirm('Do you want to submit the form?');">
                                     <br>
 
                                     <div class="Ease of use">
-                                        <h5 for="sel1">Ease of use</h5>
+                                        <h5 for="sel1">@rates(0).rateName</h5>
                                         <span class="rating">
                                             <input type="radio" class="rating-input"
                                             id="rating-input1-5" name="sel1" value="5">
@@ -172,7 +174,7 @@
                                     </div>
 
                                     <div class="Reliability">
-                                        <h5 for="sel2">Reliability</h5>
+                                        <h5 for="sel2">@rates(1).rateName</h5>
                                         <span class="rating">
                                             <input type="radio" class="rating-input"
                                             id="rating-input2-5" name="sel2" value="5">
@@ -196,7 +198,7 @@
                                         </span>
                                     </div>
                                     <div class="Completeness">
-                                        <h5 for="sel3">Completeness</h5>
+                                        <h5 for="sel3">@rates(2).rateName</h5>
                                         <span class="rating">
                                             <input type="radio" class="rating-input"
                                             id="rating-input3-5" name="sel3" value="5">
@@ -220,7 +222,7 @@
                                         </span>
                                     </div>
                                     <div class="Security">
-                                        <h5 for="sel4">Security</h5>
+                                        <h5 for="sel4">@rates(3).rateName</h5>
                                         <span class="rating">
                                             <input type="radio" class="rating-input"
                                             id="rating-input4-5" name="sel4" value="5">
@@ -244,7 +246,7 @@
                                         </span>
                                     </div>
                                     <div class="Quality of UI">
-                                        <h5 for="sel5">Quality of UI</h5>
+                                        <h5 for="sel5">@rates(4).rateName</h5>
                                         <span class="rating">
                                             <input type="radio" class="rating-input"
                                             id="rating-input5-5" name="sel5" value="5">
@@ -273,6 +275,7 @@
                                     <br>
                                 </form>
                             </article>
+                            }
                         </div>
 
                         <a href="#!" class="closePopUpOutSide"></a>
