Changed title of vote criteria list page

--- a/app/views/TimerPage.scala.html
+++ b/app/views/TimerPage.scala.html
@@ -124,11 +124,11 @@
                             }
                             </div>
                         </form>
+                        <a href="/criteriaList"> <button id="submit" type="submit" class="btn btn-primary btn-block center-block">VoteCriteriaList</button></a>
                     </div>
                 </div>
             </div>
         </header>
-
 
 
         @if(controllers.TimerController.getTimeLeftInSec() != -1) {
